--- a/coronavirus-r0-heterogeneity.ipynb
+++ b/coronavirus-r0-heterogeneity.ipynb
@@ -234,7 +234,7 @@
    "source": [
     "## Results\n",
     "\n",
-    "<img src=\"https://delong.typepad.com/img/r0-2_5-for-everyone.png\" width=\"300\" /> <img src=\"https://delong.typepad.com/img/r0-from-2_5-to-5.png\" width=\"300\" />\n",
+    "<img src=\"https://delong.typepad.com/img/r0-3-panel.png\" width=\"600\" />\n",
     "\n",
     "So instead of doing my day job this afternoon, I began wondering about how much the Susceptible, Infected, Recovered (or Not)'s suppression of individual heterogeneity affects its conclusions. Suppose that people have different amounts of gregariousness/infectiveness so that if everyone were like the most gregarious and vulnerable people the R_0 for the epidemic would be 5, and if everyone were like the least gregarious and vulnerable people the R_0 for the epidemic would be 0, with the population varying linearly between those extremes. How much different would the course of the epidemic be than for a society where everyone was identical and R_0 was 2.5?\n",
     "\n",
